@@ -1,3 +1,6 @@
+2008-11-11 fabien
+* modify some scripts to be able to make a subscription using the new safi form
+
 2008-11-03 fabien
 * add an interaction to raise an error on subscription submission if an account already exists
 * add a default parameter to NOT be in editable mode
